# SeeQRBackend

./: .env.template  .gitignore  README.md  migrations.bat  pyproject.toml  run-celery.bat  run-server.bat
backend/api/: admin.py  clients.py  consumers.py  middleware.py  models.py  prompts.py  report_queue.py  routing.py  services.py  tasks.py  urls.py  utils.py  views.py  ws.py
backend/api/migrations/: 0001_initial.py  0002_generatedreport_scannedurl.py  0003_reportjob.py  0004_generatedreport_is_processed.py  0005_urlscanioresponse.py  0006_geminiresponse.py  0007_rename_response_generatedreport_openai_response_and_more.py  0008_inquire.py  0009_generatedreport_is_edit_inquire_accept_at_and_more.py
backend/api/templates/: dashboard.html  edit.html  inquire.html  login.html  reports.html
backend/backend/: asgi.py  celery.py  settings.py  urls.py
